--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap-select": "^1.13.18",
     "core-js": "^2.6.5",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "select-picker": "^0.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.5.1",
     "vuejs-datepicker": "^1.6.2",
